# zephyr-doom

./: CHANGELOG.md  README.md  west.yml  zephyr-notes  zephyr-notes.md
doom-esp32s3/: CMakeLists.txt  esp32s3_devkitm.overlay  prj.conf
doom-esp32s3/prboom/: CMakeLists.txt  Makefile  d_main.c  lprintf.c  r_bsp.c  r_main.c  tables.c  z_zone.c
doom-esp32s3/prboom-esp32-compat/: Makefile  component.mk  gamepad.c  i_system.c  i_video.c  spi_lcd.c
doom-esp32s3/prboom-esp32-compat/include/: dma.h  gamepad.h
doom-esp32s3/prboom-wad-tables/: CMakeLists.txt  Makefile
doom-esp32s3/src/: main.c
ili9341/: CMakeLists.txt  README.md  esp32s3_devkitm.overlay  prj.conf
ili9341/src/: main.c  spi_lcd.c  spi_lcd.h
